--- a/locale/en.json
+++ b/locale/en.json
@@ -138,7 +138,8 @@
     "cryptsy": "Cryptsy",
     "cryptopia": "Cryptopia",
     "ccex": "C-Cex",
-    "coinexchange": "CoinExchange",
+	"coinexchange": "CoinExchange",
+	"tradeogre": "TradeOgre",
 
     // Heavy rewards view
     "heavy_title": "Reward/voting information",
